test/earlyReturn5.slq
def foo(x:ğ”¹){
	y:=dup(x); // error
	if y{
		return x;
	}else{
		return X(x);
	}
}
def main(){
	x:=H(0:ğ”¹); // error
	return foo(x);
}
